tests/snapshots/drift_autofix_snapshot_tests__drift_case_multiple_resources_drifted.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_instance.drift1",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "instance_type": "t3.medium"
        },
        "before": {
          "instance_type": "t2.micro"
        }
      },
      "mode": "managed",
      "name": "drift1",
      "type": "aws_instance"
    },
    {
      "address": "aws_instance.drift2",
      "change": {
        "actions": [
          "create"
        ],
        "after": {
          "instance_type": "t3.large"
        },
        "before": null
      },
      "mode": "managed",
      "name": "drift2",
      "type": "aws_instance"
    },
    {
      "address": "aws_instance.drift3",
      "change": {
        "actions": [
          "delete",
          "create"
        ],
        "after": {
          "instance_type": "t3.small"
        },
        "before": {
          "instance_type": "t3.small"
        }
      },
      "mode": "managed",
      "name": "drift3",
      "type": "aws_instance"
    }
  ]
}
