tests/snapshots/drift_autofix_snapshot_tests__drift_case_resource_deleted_outside_terraform.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_instance.web",
      "change": {
        "actions": [
          "create"
        ],
        "after": {
          "ami": "ami-12345678",
          "instance_type": "t3.medium"
        },
        "before": null
      },
      "mode": "managed",
      "name": "web",
      "type": "aws_instance"
    }
  ]
}
