tests/snapshots/drift_autofix_snapshot_tests__drift_case_route53_record_ttl.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_route53_record.www",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "records": [
            "192.0.2.1"
          ],
          "ttl": 60
        },
        "before": {
          "records": [
            "192.0.2.1"
          ],
          "ttl": 300
        }
      },
      "mode": "managed",
      "name": "www",
      "type": "aws_route53_record"
    }
  ]
}
