tests/snapshots/drift_autofix_snapshot_tests__drift_case_secrets_manager_rotation.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_secretsmanager_secret_rotation.db",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "rotation_rules": {
            "automatically_after_days": 7
          }
        },
        "before": {
          "rotation_rules": {
            "automatically_after_days": 30
          }
        }
      },
      "mode": "managed",
      "name": "db",
      "type": "aws_secretsmanager_secret_rotation"
    }
  ]
}
