tests/snapshots/drift_autofix_snapshot_tests__drift_case_security_group_rules_modified.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_security_group.web",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "ingress": [
            {
              "from_port": 80,
              "protocol": "tcp",
              "to_port": 80
            },
            {
              "from_port": 443,
              "protocol": "tcp",
              "to_port": 443
            }
          ]
        },
        "before": {
          "ingress": [
            {
              "from_port": 80,
              "protocol": "tcp",
              "to_port": 80
            }
          ]
        }
      },
      "mode": "managed",
      "name": "web",
      "type": "aws_security_group"
    }
  ]
}
