tests/snapshots/drift_autofix_snapshot_tests__drift_case_sns_topic_subscription.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_sns_topic_subscription.alert",
      "change": {
        "actions": [
          "create"
        ],
        "after": {
          "endpoint": "ops@example.com",
          "protocol": "email",
          "topic_arn": "arn:aws:sns:us-east-1:123456789012:alerts"
        },
        "before": null
      },
      "mode": "managed",
      "name": "alert",
      "type": "aws_sns_topic_subscription"
    }
  ]
}
